overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,7 @@
 
 .book-card {
   margin: 2%;
-  min-width: 350px;
+
 }
 
 .info-box {
